--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-image-crop": "^11.0.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
