--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "js-cookie": "^3.0.5",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
