--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v5.0.0
 
       - name: Set up Node.js
-      - uses: actions/setup-node@v6
+        uses: actions/setup-node@v6
         with:
           node-version: 24
           cache: npm
