--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v5.0.0
         with:
           name: dist
-          path: dist
+          path: dist/
 
 
 
