--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ name: Frontend CD pipeline(image deploy to ECR and artifacts upload on github)
 on:
   workflow_run:
     workflows: ["Frontend CI"]
+    types:
+      - completed
 
 
 concurrency:
@@ -46,6 +48,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GHR_COMPRESS: xz
-          GHR_PATH: build/
+          GHR_PATH: dist/
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
