--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v5.0.0
-
+      
+      - uses: ./.github/workflows/main.yml
       - name: Download a Build Artifact
         uses: actions/download-artifact@v6.0.0
         with:
