--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,24 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v5.0.0
       
-      - uses: ./.github/workflows/main.yml
-      - name: Download a Build Artifact
-        uses: actions/download-artifact@v6.0.0
+      # Download artifact from previous workflow using API
+      - name: Download artifact from previous workflow
+        uses: dawidd6/action-download-artifact@v3
         with:
+          workflow: "Frontend CI"
           name: dist
+          workflow_conclusion: success
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+            # - name: Download a Build Artifact
+            #   uses: actions/download-artifact@v6.0.0
+            #   with:
+            #     name: dist
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5.1.0
